src/main/metadata-excluded/objects/Travel_Cost__c.object
<CustomObject>
    <description>PMO: Timesheet travel cost</description>
    <fields>
        <fullName>Arrival_Airline__c</fullName>
        <label>Arrival Airline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Airline__c</fullName>
        <label>Departure Airline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Ticket_Budget__c</fullName>
        <formula>$User.Flight_Ticket_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Ticket Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Sheet__c</fullName>
        <label>Time Sheet</label>
        <referenceTo>Time_sheet__c</referenceTo>
        <relationshipLabel>Travel Cost</relationshipLabel>
        <relationshipName>Travel_Cost</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Travel Cost</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Travel Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>